# gomi-elasticnet

./: .flake8  .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: example.ipynb  sklearn.ipynb
gmelasticnet/: __init__.py  sklearn.py
src/: elasticnet.rs  lib.rs  prox.rs  scaler.rs
src/elasticnet/: params.rs
